--- a/Huiswerk12.html
+++ b/Huiswerk12.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-  <link rel="stylesheet" type="text/css" href="huiswerk12.css" />
+  <link rel="stylesheet" type="text/css" href="huiswerk12.css">
 <meta charset="utf-8">
 <title>Huiswerk opgave 12</title>
-<style type="text/css">
+<style>
 
 header{
 width: 100%;
@@ -22,7 +22,7 @@ height: 50px;
 <body>
   <header></header>
 <br>
-<table style="width:60%" align="center">
+<table style="width:60%">
 <tr class="row-1">
 <td id="AA"><img src="Achtbaan.jpg" height="100" alt="Achtbaan"></td>
 <td id="AB">Tomaat</td>
